--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
 </head>
 
 <body>
-
     <header>
         <div>
             <h1>
                 Hector Rodriguez
             </h1>
         </div>
-        
-            <img class="portrait" src="images/hector_portrait.jpg" alt= "Hector Rodriguez family picture">
-       
+
+        <img class="portrait" src="images/hector_portrait.jpg" alt="Hector Rodriguez family picture">
+
     </header>
     <main>
         <h2>CIT 230: Assignment Portal</h2>
         <ul>
-            <li>Lesson 2: <a href="" >Assignment Link</a></li>
-            <li>Lesson 3: <a href="" >Assignment Link</a></li>
-            <li>Lesson 4: <a href="" >Link</a> | <a href="" >Link</a></li>
+            <li>Lesson 2: <a href="">Assignment Link</a></li>
+            <li>Lesson 3: <a href="">Assignment Link</a></li>
+            <li>Lesson 4: <a href="">Link</a> | <a href="">Link</a></li>
         </ul>
     </main>
     <footer>
-        <p>&copy; <span id="year"></span> | Hector Rodriguez | Venezuela | <a href="https://www.byui.edu/online">BYUI Online Learning</a></p>
+        <p>&copy; <span id="year"></span> | Hector Rodriguez | Venezuela | <a href="https://www.byui.edu/online">BYUI
+                Online Learning</a></p>
         <p class="textDate">Last Updated: <span id="dateUpdated"></span></p>
         <script src="js/functions.js"></script>
     </footer>
-  
+
 </body>
 
 </html>
