--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <footer>
         <p>&copy; <span id="year"></span> | Hector Rodriguez | Venezuela | <a href="https://www.byui.edu/online">BYUI
                 Online Learning</a></p>
-        <p class="textDate">Last Updated: <span id="dateUpdated"></span></p>
+        <p class="textDate"><span id="dateUpdated"></span></p>
         <script src="js/functions.js"></script>
     </footer>
 
