--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="The Webdesingner website show information about web services as graphic design, software development and another porjects developed as a student of BYU Idaho">
     <link rel="stylesheet" href="css/style.css" />
+      <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap" rel="stylesheet">
 </head>
 
