--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description"
-        content="The Webdesingner website show information about web services as graphic design, software development and another porjects developed as a student of BYU Idaho">
-    <link rel="stylesheet" href="css/style.css" />
-      <link rel="stylesheet" href="css/normalize.css">
+        content="The Webdesigner website show information about web services as graphic design, software development and another projects developed as a student of BYU Idaho">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/small.css" />
+    <link rel="stylesheet" href="css/medium.css" />
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div>
-            <h1>
-                Hector Rodriguez
-            </h1>
-        </div>
-
         <img class="portrait" src="images/hector_portrait.jpg" alt="Hector Rodriguez family picture">
+        <h1>Hector Rodriguez</h1>
+
+
+
 
     </header>
     <main>
