--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -25,45 +25,66 @@
         <section class="first-col">
         <header>
             <h2>
-                First Web site
+               Contrast
             </h2>
         </header>
-            <h4>Bank of America</h4>
-            <a href="https://www.w3docs.com/" class="button">Click Here</a>
-            <img src="images/website1.jpeg" alt= "first-website">
+            <h4>CSS-TRICKS</h4>
+            <a href="https://www.css-tricks.com/"  target="_blank" class="button">View Web</a>
+            <img src="images/csstricks.jpeg" alt= "css-tricks">
             <p>
-                This site was an exmaple of how to aply the design principles
-                especially about rule of thrids and proximy, we can observe that
-                all the grids all well positioned , the css is clear and the html
-                doesn't has any error
+                This website use dark colors for background with white and a very vibrant orange that creates
+               a great contrast but also maintaining the style simple and offers a better user experience for reading. 
+               <p>
+                CSS-Tricks teach how you can implement styles with css, and the y maintain the style over all the web.
+                The effects in contrast with white and black are very common, and the embedded code inserted in the tutorials have
+                these colors considered for the contrast.          </p>
             </p>
         </section>
         <section class="second-col">
-            <h2>
-                Second Web Site
-            </h2>
-            <h4>Bank of America</h4>
-            <a href="https://www.w3docs.com/" class="button">Click Here</a>
-            <img src="images/website2.jpeg" alt= "second-website">
+            <header>
+                <h2>
+                    Hick's Law
+                </h2>
+            </header>
+            <h4>Rappi</h4>
+            <a href="https://www.rappi.com.pe" target="_blank" class="button">Click Here</a>
+            <img src="images/rappi.jpeg" alt= "second-website">
             <p>
-                This site was an exmaple of how to aply the design principles
-                especially about rule of thrids and proximy, we can observe that
-                all the grids all well positioned , the css is clear and the html
-                doesn't has any error
+                It is a company in Latin America for food delivery, 
+                household products and many other services. 
+                In the design of their website, which is very similar to the app,
+                 they apply the Hick’s Law , 
+                 offering filters and categories that facilitate the search
+                  for required products or services.
+            </p>
+            <p>
+                The website on mobile, desktop and app are very easy to use
+                 and optimize the time of product search, 
+                 reducing the options available through filters.
             </p>
         </section>
         <section class="third-col">
-            <h2>
-               Third web site 
-            </h2>
-            <h4>Bank of America</h4>
-            <a href="https://www.w3docs.com/" class="button">Click Here</a>
-            <img src="images/website3.jpeg" alt= "third-website">
+            <header>
+                <h2>
+                    Proximity
+                </h2>
+            </header>
+            <h4>BYU Pathway</h4>
+            <a href="https://www.byupathway.org/" target="_blank"  class="button">Click Here</a>
+            <img src="images/byupathway.jpeg" alt= "third-website">
             <p>
-                This site was an exmaple of how to aply the design principles
-                especially about rule of thrids and proximy, we can observe that
-                all the grids all well positioned , the css is clear and the html
-                doesn't has any error
+                Pathway website is very interesting when we observe several principles design. 
+                Clearly, the pattern used in all the pages maintain a standard 
+                separation between paragraphs and elements. 
+
+                
+            </p>
+            <p>
+                It's easy to follow the reading , 
+                instructions and order in the content,
+                 because the proximity is well focused, 
+                 allowing the understanding of what is related between a 
+                 pair of elements or which of them belong to different areas.
             </p>
         </section>
     
