--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <h2>CIT 230: Assignment Portal</h2>
         <ul>
-            <li>Lesson 2: <a href="">Assignment Link</a></li>
+            <li>Lesson 2: <a href="lesson2/design-principles.html">Assignment Link</a></li>
             <li>Lesson 3: <a href="">Assignment Link</a></li>
             <li>Lesson 4: <a href="">Link</a> | <a href="">Link</a></li>
         </ul>
