--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -47,7 +47,7 @@
                 </h2>
             </header>
             <h4>Rappi</h4>
-            <a href="https://www.rappi.com.pe" target="_blank" class="button">Click Here</a>
+            <a href="https://www.rappi.com.pe" target="_blank" class="button">View Web</a>
             <img src="images/rappi.jpeg" alt= "second-website">
             <p>
                 It is a company in Latin America for food delivery, 
@@ -70,7 +70,7 @@
                 </h2>
             </header>
             <h4>BYU Pathway</h4>
-            <a href="https://www.byupathway.org/" target="_blank"  class="button">Click Here</a>
+            <a href="https://www.byupathway.org/" target="_blank"  class="button">View Web</a>
             <img src="images/byupathway.jpeg" alt= "third-website">
             <p>
                 Pathway website is very interesting when we observe several principles design. 
