Adding tags and alt attribute

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -49,7 +49,7 @@
             </header>
             <h4>Rappi</h4>
             <a href="https://www.rappi.com.pe" target="_blank" class="button">View Web</a>
-            <img src="images/rappi.jpeg" alt= "second-website">
+            <img src="images/rappi.jpeg" alt= "rappi-delivery">
             <p>
                 It is a company in Latin America for food delivery, 
                 household products and many other services. 
@@ -72,7 +72,7 @@
             </header>
             <h4>BYU Pathway</h4>
             <a href="https://www.byupathway.org/" target="_blank"  class="button">View Web</a>
-            <img src="images/byupathway.jpeg" alt= "third-website">
+            <img src="images/byupathway.jpeg" alt= "byu-pathway">
             <p>
                 Pathway website is very interesting when we observe several principles design. 
                 Clearly, the pattern used in all the pages maintain a standard 
