Lesson3. Website plannig document

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description"
-        content="The Webdesigner website show information about web services as graphic design, software development and another projects developed as a student of BYU Idaho">
+    content="The Webdesigner website show information about web services as graphic design, software development and another projects developed as a student of BYU Idaho">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
@@ -27,7 +27,7 @@
         <h2>CIT 230: Assignment Portal</h2>
         <ul>
             <li>Lesson 2: <a href="lesson2/design-principles.html">Assignment Link</a></li>
-            <li>Lesson 3: <a href="">Assignment Link</a></li>
+            <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
             <li>Lesson 4: <a href="">Link</a> | <a href="">Link</a></li>
         </ul>
     </main>
