--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -32,7 +32,7 @@
             <header> 
                 <h2>Typography</h2>
             </header>
-            <p>The fonts applied are hadows Into Light for headings and Monserrat for paragraph, navigation and footer </p>
+            <p>The fonts applied are Shadows Into Light for headings and Monserrat for paragraph, navigation and footer </p>
             <h1>This is an example of heading h1 using Shadows Into Light</h1>
            <h2>This is an example of heading h1 using h2: Shadows Into Light </h2>
            <p>Paragraph with Monserrat</p>
