Update Lesson3 responsive

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -9,8 +9,9 @@
         
         content="Tropical Planner allows users to obtain information about weather conditions in tropical destinies in several stations of the year, to help them to plan the visit toward those destinies.">
    
-    <link rel="stylesheet" href="css/small.css" />
-
+    <link rel="stylesheet" href="css/small.css" />      
+    <link rel="stylesheet" href="css/medium.css" />
+    <link rel="stylesheet" href="css/large.css" />
     
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
