--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -91,7 +91,7 @@
         <div class="article contentBox">
             <article>
                 <h2>Article</h2>
-                <img src="images/hero-beach.jpg">
+                <img src="images/ocean.jpg">
                 <p>This prediction is generated automatically from numerical and statistical models of weather forecast.
                     The prediction of beaches establishes the state of cloudiness for certain hours, the 11:00 official
                     hours as representative of the morning and 17:00 for the afternoon. It is also analyzed if
