--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <title>Hector Rodriguez WebDesigner|Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description"
-    content="The Webdesigner website show information about web services as graphic design, software development and another projects developed as a student of BYU Idaho">
+    <meta name="description" content="The Webdesigner website show information about web services as graphic design, software development and another projects developed as a student of BYU Idaho">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="shortcut icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap" rel="stylesheet">
+    <!--  <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap" rel="stylesheet">-->
 </head>
 
 <body>
@@ -37,7 +36,8 @@
         <p class="textDate"><span id="dateUpdated"></span></p>
         <script src="js/functions.js"></script>
     </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="js/webfont.js"></script>
 </body>
 
 </html>
