--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li>Lesson 2: <a href="lesson2/design-principles.html">Assignment Link</a></li>
             <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
             <li>Lesson 4: <a href="lesson4/preston-4.html">Preston</a> | <a href="lesson5/preston-5.html">Preston page finished</a></li>
+            <li>Lesson 6: <a href="lesson6/preston-6.html">Wind Chill and Hero Image</a></li>
         </ul>
     </main>
     <footer>
