--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
             <li>Lesson 4: <a href="lesson4/preston-4.html">Preston</a> | <a href="lesson5/preston-5.html">Preston page finished</a></li>
             <li>Lesson 6: <a href="lesson6/preston-6.html">Wind Chill and Hero Image</a></li>
+            <li>Lesson 7: <a href="lesson7/lazyload.html">Lazy Loading</a>| <a href="lesson5/preston-5.html">Gallery</a></li>
         </ul>
     </main>
     <footer>
