--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Tropical Planer|Home</title>
+    <title>Table build</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Table build">
