--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -55,7 +55,7 @@
                     <td id="final">$7,500</td>
                 </tr>
                 <tr>
-                    <td>Black Friday</td>
+                    <td><em>Black Friday</em></td>
                     <td colspan="2">$3200</td>
                 </tr>
                 <tr>
