--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>Lesson 4: <a href="lesson4/preston-4.html">Preston</a> | <a href="lesson5/preston-5.html">Preston page finished</a></li>
             <li>Lesson 6: <a href="lesson6/preston-6.html">Wind Chill and Hero Image</a></li>
             <li>Lesson 7: <a href="lesson7/lazyload.html">Lazy Loading</a>| <a href="lesson7/gallery-7.html">Gallery page</a></li>
-            <li>Lesson 8: <a href="lesson-8/tablebuild.html">Table Build</a></li>
+            <li>Lesson 8: <a href="lesson-8/tablebuild.html">Table Build</a>| <a href="lesson-8/stormcenter.html">Storm Center</a></li>
         </ul>
     </main>
     <footer>
