--- a/lesson-8/stormcenter.html
+++ b/lesson-8/stormcenter.html
@@ -45,7 +45,7 @@
             <fieldset>
                 <legend>Personal information</legend>
                 <label for="name">Name:<label class="lrequired">(*)</label>
-                <input type="text" name="name" id="name" pattern="[a-zA-Z0-9\s]{5,}" required>
+                <input type="text" name="name" id="name" pattern="[A-Za-z ]{5,}" required>
                 </label>
                 <label for="email">Email:
             <input type="email" name="email" id="email" placeholder="example@domain.com">
