--- a/lesson-9/prophets.html
+++ b/lesson-9/prophets.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Prophets JSON activity.">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="prophepts.css">
-    <script src="prophets.js"></script>
+    <script src="js/prophets.js"></script>
 
 </head>
 
