--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -5,8 +5,7 @@
     <title>Tropical Planer|Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description"
-        content="Tropical Planner allows users to obtain information about weather conditions in tropical destinies in several stations of the year, to help them to plan the visit toward those destinies.">
+    <meta name="description" content="Tropical Planner allows users to obtain information about weather conditions in tropical destinies in several stations of the year, to help them to plan the visit toward those destinies.">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
@@ -30,36 +29,36 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#">&#9776; Menu</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#" class="active">Preston</a></li>
+            <li><a href="../lesson-9/index.html">Home</a></li>
+            <li><a href="../lesson5/preston-5.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="../lesson-8/stormcenter.html">Storm Center</a></li>
+            <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
             <li><a href="#">Typography</a></li>
         </ul>
     </nav>
     <main>
         <h2>Preston Idaho</h2>
         <div class="herodiv">
-          <div class ="summary">
-            <div class="summary-titles">
-                <p>Current:</p> 
-                <p>High:</p>
-                <p>Low:</p>
-                <p>Wind Chill:</p>
-                <p>Humidity:</p>
-            </div>
-            <div class="summary-data">
-                <p>Cloudy</p> 
-                <p>40° F</p>
-                <p>30° F</p>
-                <p>45 ° F</p>
-                <p>75% </p>
+            <div class="summary">
+                <div class="summary-titles">
+                    <p>Current:</p>
+                    <p>High:</p>
+                    <p>Low:</p>
+                    <p>Wind Chill:</p>
+                    <p>Humidity:</p>
+                </div>
+                <div class="summary-data">
+                    <p>Cloudy</p>
+                    <p>40° F</p>
+                    <p>30° F</p>
+                    <p>45 ° F</p>
+                    <p>75% </p>
+                </div>
             </div>
         </div>
-        </div>
-        <h2 class ="forecastTitle">5 Day Forecast</h2>
+        <h2 class="forecastTitle">5 Day Forecast</h2>
         <div class="forecast">
             <div class="col">
                 <span class="label">Wednesday</span>
@@ -91,14 +90,10 @@
         <div class="article contentBox">
             <article>
                 <h2>Article</h2>
-                <img src="images/ocean.jpg" alt = "ocean"> 
-                <p>This prediction is generated automatically from numerical and statistical models of weather forecast.
-                    The prediction of beaches establishes the state of cloudiness for certain hours, the 11:00 official
-                    hours as representative of the morning and 17:00 for the afternoon. It is also analyzed if
-                    precipitation is expected around these hours, between 08:00 and 14:00 in the morning and between
-                    14:00 and 20:00 in the afternoon. Automatic generation may occasionally result, in special weather
-                    situations or in certain geographical areas, to not fully coincide with other predictions made by
-                    the Agency.</p>
+                <img src="images/ocean.jpg" alt="ocean">
+                <p>This prediction is generated automatically from numerical and statistical models of weather forecast. The prediction of beaches establishes the state of cloudiness for certain hours, the 11:00 official hours as representative of the morning
+                    and 17:00 for the afternoon. It is also analyzed if precipitation is expected around these hours, between 08:00 and 14:00 in the morning and between 14:00 and 20:00 in the afternoon. Automatic generation may occasionally result, in
+                    special weather situations or in certain geographical areas, to not fully coincide with other predictions made by the Agency.</p>
             </article>
         </div>
 
@@ -114,14 +109,17 @@
                 <p>145 Altamira East</p>
                 <p>Caracas, 6007</p>
                 <p>&phone;+5812456789</p>
-                <p>  &#9993;contact@tropicaldayplanner</p>
+                <p> &#9993;contact@tropicaldayplanner</p>
                 <ul class="social">
-                    <li><a href="https://www.twitter.com" target="_blank"><img src="images/social/twitter.png"
-                                alt="twitter-icon"></a></li>
-                    <li><a href="https://www.facebook.com" target="_blank"><img src="images/social/facebook.png"
-                                alt="facebook-icon"></a></li>
-                    <li><a href="https://www.linkedin.com" target="_blank"><img src="images/social/linkedin.png"
-                                alt="linkedin-icon"></a></li>
+                    <li>
+                        <a href="https://www.twitter.com" target="_blank"><img src="images/social/twitter.png" alt="twitter-icon"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com" target="_blank"><img src="images/social/facebook.png" alt="facebook-icon"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com" target="_blank"><img src="images/social/linkedin.png" alt="linkedin-icon"></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -131,8 +129,7 @@
 
     </main>
     <footer>
-        <p>&copy; <span>The Weather Site</span> | <a href="../index.html">Hector Rodriguez</a> | Venezuela | <a
-                href="https://www.byui.edu/online">BYUI
+        <p>&copy; <span>The Weather Site</span> | <a href="../index.html">Hector Rodriguez</a> | Venezuela | <a href="https://www.byui.edu/online">BYUI
                 Online Learning</a></p>
         <p class="textDate"><span id="dateUpdated"></span></p>
         <script src="js/functions.js"></script>
