--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -29,12 +29,12 @@
     <nav>
         <ul class="navigation">
             <li><a class="ham" href="#">&#9776; Menu</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="">Preston</a></li>
+            <li><a href="../lesson-9/index.html">Home</a></li>
+            <li><a href="../lesson5/preston-5.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
-            <li><a href="#">Storm Center</a></li>
-            <li><a href="#" class="active">Gallery</a></li>
+            <li><a href="../lesson-8/stormcenter.html">Storm Center</a></li>
+            <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
             <li><a href="#">Typography</a></li>
         </ul>
     </nav>
