--- a/lesson-10/preston-10.html
+++ b/lesson-10/preston-10.html
@@ -5,13 +5,16 @@
     <title>Tropical Planer|Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#317EFB" />
     <meta name="description" content="Tropical Planner allows users to obtain information about weather conditions in tropical destinies in several stations of the year, to help them to plan the visit toward those destinies.">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
 
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Shadows+Into+Light&display=swap" rel="stylesheet">
+    <script src="js/weatherapi.js" type="text/javascript"></script>
+    <script src="js/windchill.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -19,7 +22,7 @@
         <p><strong>Saturday</strong>: Pancakes in the beach <br> <strong>10:00 a.m. Saturday</strong> at the Preston beach.</p>
     </div>
     <header class="top-header">
-        <img class="logo" src="../images/icon-umbrella.png" alt="logo">
+        <img class="logo" src="images/icon-umbrella.png" alt="logo">
         <section class="headings">
             <h1> Tropical Planner</h1>
             <div class="motto">We find the best option for you</div>
@@ -38,22 +41,30 @@
             <li><a href="#">Typography</a></li>
         </ul>
     </nav>
-    <div class="herodiv">
-        <h1 class="h1-light">
-            Tropical Planner
-        </h1>
-
-    </div>
     <main>
+        <h2>Preston Idaho</h2>
+        <div class="herodiv">
+            <div class="summary">
+                <div class="summary-titles">
+                    <p>Current:</p>
+                    <p>High:</p>
+                    <p>Wind Chill:</p>
+                    <p>Wind Speed:</p>
+                    <p>Humidity:</p>
+                </div>
+                <div class="summary-data">
+
+                </div>
+            </div>
+        </div>
+        <h2 class="forecastTitle">5 Day Forecast</h2>
+        <div class="forecast">
 
 
-        <h1 class="titles">Storm Center </h1>
-
-        <div class=" cards "></div>
+        </div>
         <div class="article contentBox">
-
-            <h1 class="titles">Weather predictions now! </h1>
             <article>
+                <h2>Article</h2>
                 <img src="images/ocean.jpg" alt="ocean">
                 <p>This prediction is generated automatically from numerical and statistical models of weather forecast. The prediction of beaches establishes the state of cloudiness for certain hours, the 11:00 official hours as representative of the morning
                     and 17:00 for the afternoon. It is also analyzed if precipitation is expected around these hours, between 08:00 and 14:00 in the morning and between 14:00 and 20:00 in the afternoon. Automatic generation may occasionally result, in
@@ -88,16 +99,16 @@
             </div>
         </div>
 
-    </main>
 
+
+
+    </main>
     <footer>
-        <p>&copy; <span>The Weather Site</span> | <a href="../index.html">Hector Rodriguez</a> | Venezuela | <a href="https://www.byui.edu/online">BYUI
-                Online Learning</a></p>
+        <p>&copy; <span>The Weather Site</span> | <a href="../index.html">Hector Rodriguez</a> | Venezuela | <a href="https://openweathermap.org/api"> Weather Data from OpenWeatherMap</a></p>
         <p class="textDate"><span id="dateUpdated"></span></p>
         <script src="js/functions.js"></script>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="js/webfontIndex.js"></script>
+
 </body>
 
 </html>
