--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li>Lesson 7: <a href="lesson7/lazyload.html">Lazy Loading</a>| <a href="lesson7/gallery-7.html">Gallery page</a></li>
             <li>Lesson 8: <a href="lesson-8/tablebuild.html">Table Build</a>| <a href="lesson-8/stormcenter.html">Storm Center</a></li>
             <li>Lesson 9: <a href="lesson-9/prophets.html">Prophets</a>| <a href="lesson-9/index.html">Home Page</a></li>
+            <li>Lesson 9: <a href="lesson-10/preston-10.html">Preston</a>
         </ul>
     </main>
     <footer>
