--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -19,7 +19,7 @@
         <p><strong>Saturday</strong>: Pancakes in the beach <br> <strong>10:00 a.m. Saturday</strong> at the Preston beach.</p>
     </div>
     <header class="top-header">
-        <img class="logo" src="../images/icon-umbrella.png" alt="logo">
+        <a href="index.html"><img class="logo" src="images/icon-umbrella.png" alt="logo"></a>
         <section class="headings">
             <h1> Tropical Planner</h1>
             <div class="motto">We find the best option for you</div>
@@ -33,7 +33,7 @@
             <li><a href="preston.html">Preston</a></li>
             <li><a href="sodasprings.html">Soda Springs</a></li>
             <li><a href="fishhaven.html">Fish Haven</a></li>
-            <li><a href="stormcenter.html">Storm Center</a></li>
+            <li><a href="stormcenter.html" class="active">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
 
         </ul>
