--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#317EFB" />
     <meta name="description" content="Tropical Planner allows users to obtain information about weather conditions in tropical destinies in several stations of the year, to help them to plan the visit toward those destinies.">
     <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="fishhaven/css/small.css" />
-    <link rel="stylesheet" href="fishhaven/css/medium.css" />
-    <link rel="stylesheet" href="fishhaven/css/large.css" />
+    <link rel="stylesheet" href="fishHaven/css/small.css" />
+    <link rel="stylesheet" href="fishHaven/css/medium.css" />
+    <link rel="stylesheet" href="fishHaven/css/large.css" />
 
 
     <script src="fishhaven/js/weatherapi.js" type="text/javascript"></script>
