--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -107,7 +107,7 @@
     <footer>
         <p>&copy; <span>The Weather Site</span> | <a href="../index.html">Hector Rodriguez</a> | Venezuela | <a href="https://openweathermap.org/api"> Weather Data from OpenWeatherMap</a></p>
         <p class="textDate"><span id="dateUpdated"></span></p>
-        <script src="fishhaven/js/functions.js"></script>
+        <script src="fishHaven/js/functions.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script src="js/webfont.js"></script>
     </footer>
