--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="fishHaven/css/large.css" />
 
 
-    <script src="fishhaven/js/weatherapi.js" type="text/javascript"></script>
-    <script src="fishhaven/js/windchill.js" type="text/javascript"></script>
+    <script src="fishHaven/js/weatherapi.js" type="text/javascript"></script>
+    <script src="fishHaven/js/windchill.js" type="text/javascript"></script>
 </head>
 
 <body>
