--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li>Lesson 9: <a href="lesson-9/prophets.html">Prophets</a>| <a href="lesson-9/index.html">Home Page</a></li>
             <li>Lesson 10: <a href="lesson-10/preston-10.html">Preston API</a></li>
             <li>Lesson 11: <a href="lesson11/index.html">Tropical Weather Site</a></li>
+            <li>Lesson 12: <a href="lesson12/index.html">CSS Preprocessor</a></li>
 
         </ul>
     </main>
